# whisper-stream

./: Dockerfile  README.md  check_torch.py  monitor.sh  pyproject.toml  whisper_fastapi_online_server.py
src/diarization/: diarization_online.py
src/whisper_streaming/: whisper_online.py
