[project]
name = "whisper-streaming-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.2.post1",
    "soundfile>=0.13.1",
    "whisper-timestamped",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "fastapi>=0.115.8",
    "ffmpeg-python>=0.2.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0",
    "diart>=0.9.2",
    "faster-whisper>=1.1.1",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]
cu124 = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]
[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
whisper-timestamped = { git = "https://github.com/linto-ai/whisper-timestamped" }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
